tests/parser/invalid-expression.expect
tests/parser/invalid-expression.prog:3:3: error: token doesn't start an expression