tests/parser/invalid-expression.prog
main: proc() void
{
  ) + 4;
}
